--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
     <link rel="stylesheet" href="/css/style.min.css" />
   </head>
   <body>
-    <section>ෆ꒰ ྀི ˙꒳˙ ྀི꒱ෆ ෆ꒰ ྀི ˙꒳˙ ྀི꒱ෆ ෆ꒰ ྀི ˙꒳˙ ྀི꒱ෆ ෆ꒰ ྀི ˙꒳˙ ྀི꒱ෆ</section>
-    <h3>You've Reached the top</h3>
-    <div id="pocket">
-      <h3>pocket</h3>
-      <div id="pocket_container"></div>
-      <button>stack the stones</button>
-    </div>
+    <button>You've Reached the top</button>
     <span class="stone">
       <img src="/images/Ellipse 1.png" />
     </span>
@@ -29,8 +23,14 @@
     <span class="stone">
       <img src="/images/Ellipse 5.png" />
     </span>
-    <h1>Alternative Mountain</h1>
-    <h2>climb the mountain and collect stones</h2>
+    <div id="greeting">
+      <h1>Alternative Mountain</h1>
+      <h2>Welcome, Start climbing and collect stones.</h2>
+    </div>
+    <div id="pocket">
+      <h3>Pocket</h3>
+      <div id="pocket_container"></div>
+    </div>
     <script src="/js/stone.js"></script>
   </body>
 </html>
