--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       <span class="stone" data-meaning="confidence">
         <img src="/images/Ellipse 5.png" />
       </span>
+      <div class="parallax_bg">
+        <img class="parallax_up" src="/images/bg/layer_1.png" alt="image" />
+      </div>
     </section>
     <div class="greeting">
       <h1>Alternative Mountain</h1>
@@ -45,5 +48,6 @@
       </div>
     </div>
     <script src="/js/stone.js"></script>
+    <!-- <script src="/js/parallax.js"></script> -->
   </body>
 </html>
