--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
     </div>
     <div class="pocket_bar">
       <canvas id="stoneStacker"></canvas>
-      <div class="button_bar">
+      <div id="button_bar">
         <button id="openCanvas_btn">I want to stack</button>
-        <button id="hidePocket_btn">close</button>
+      </div>
+      <div id="button_bar2">
+        <input placeholder="enter your wish" />
+        <button id="stack">stack!</button>
+        <button id="closeCanvas_btn">close</button>
       </div>
       <div id="pocket">
         <span>Pocket</span>
