--- a/mountain.html
+++ b/mountain.html
@@ -7,35 +7,37 @@
     <link rel="stylesheet" href="/css/mountainstyle.min.css" />
   </head>
   <body>
-    <button class="top">climb to the top</button>
-    <div class="stoneContainer">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+    <a href="top.html" class="button">climb to the top</a>
+    <div class="pocket">
+      <h3>Pocket</h3>
+      <div class="stoneContainer">
+        <div class="container" data-index="1"></div>
+        <div class="container" data-index="2"></div>
+        <div class="container" data-index="3"></div>
+        <div class="container" data-index="4"></div>
+        <div class="container" data-index="5"></div>
+        <div class="container" data-index="6"></div>
+        <div class="container" data-index="7"></div>
+        <div class="container" data-index="8"></div>
+        <div class="container" data-index="9"></div>
+        <div class="container" data-index="10"></div>
+        <div class="container" data-index="11"></div>
+        <div class="container" data-index="12"></div>
+      </div>
     </div>
     <div class="stones">
-      <img src="/images/stone-element/stone_1.png" />
-      <img src="/images/stone-element/stone_2.png" />
-      <img src="/images/stone-element/stone_3.png" />
-      <img src="/images/stone-element/stone_4.png" />
-      <img src="/images/stone-element/stone_5.png" />
-      <img src="/images/stone-element/stone_6.png" />
-      <img src="/images/stone-element/stone_7.png" />
-      <img src="/images/stone-element/stone_8.png" />
-      <img src="/images/stone-element/stone_9.png" />
-      <img src="/images/stone-element/stone_10.png" />
-      <img src="/images/stone-element/stone_11.png" />
-      <img src="/images/stone-element/stone_12.png" />
-      <img src="/images/stone-element/stone_13.png" />
+      <img class="stone" data-index="1" src="/images/stone-element/stone_1.svg" />
+      <img class="stone" data-index="2" src="/images/stone-element/stone_2.svg" />
+      <img class="stone" data-index="3" src="/images/stone-element/stone_3.svg" />
+      <img class="stone" data-index="4" src="/images/stone-element/stone_4.svg" />
+      <img class="stone" data-index="5" src="/images/stone-element/stone_5.svg" />
+      <img class="stone" data-index="6" src="/images/stone-element/stone_6.svg" />
+      <img class="stone" data-index="7" src="/images/stone-element/stone_7.svg" />
+      <img class="stone" data-index="8" src="/images/stone-element/stone_8.svg" />
+      <img class="stone" data-index="9" src="/images/stone-element/stone_9.svg" />
+      <img class="stone" data-index="10" src="/images/stone-element/stone_10.svg" />
+      <img class="stone" data-index="11" src="/images/stone-element/stone_11.svg" />
+      <img class="stone" data-index="12" src="/images/stone-element/stone_12.svg" />
     </div>
     <div class="parallax-wrap">
       <span value="-5"><img src="/images/parallax-element/bg_1.svg" /></span>
@@ -131,14 +133,24 @@
       <span value="5"><img src="/images/parallax-element/bg_91.svg" /></span>
       <span value="-3"><img src="/images/parallax-element/bg_92.svg" /></span>
       <span value="-5"><img src="/images/parallax-element/bg_93.svg" /></span>
-      <div class="greeting">
-        <h2>Welcome to Alternative Mountain</h2>
-        <body>
-          This space is to just simply take a break<br />
-          from the noises around you and climb up a website.<br />
-          Pay a close attention to the stones and listen carefully<br />
-          to what they have to say.
-        </body>
+      <div class="sign">
+        <div class="greeting">
+          <h2>Mount Web</h2>
+          <p>
+            This space is to just simply take a break<br />
+            from the noises around you and climb up a website.<br />
+            Pay a close attention to the stones and listen carefully<br />
+            to what they have to say.
+          </p>
+          <div>
+            <h3>Instruction</h3>
+            <p>
+              Climb this website, find stones <br />
+              and add the ones you like to your collection.
+            </p>
+          </div>
+        </div>
+        <div class="stick"></div>
       </div>
     </div>
     <script src="/js/mountain.js"></script>
