--- a/top.html
+++ b/top.html
@@ -8,15 +8,15 @@
   </head>
   <body>
     <div class="btnBar">
-      <button id="openCanvasBtn">I want to stack</button>
+      <button id="openCanvasBtn">Stack</button>
       <button id="closeCanvasBtn">I don't want to stack</button>
-      <a href="./mountain.html" id="goDown">Go down</a>
+      <a href="./index.html" id="goDown">Go down</a>
     </div>
     <div id="collection"></div>
     <div id="canvasPocket">
       <div id="canvasContainer">
         <h3>Stone Stacker</h3>
-        <canvas id="canvas" width="420" height="534"></canvas>
+        <canvas id="canvas" width="420" height="420"></canvas>
         <div class="canvasBtnBar">
           <input type="text" id="message" placeholder="Add a message" maxlength="100" size="10" />
           <button id="stack">Stack</button>
@@ -38,6 +38,15 @@
           <img class="stone" src="/images/stone-element/stone_10.svg" />
           <img class="stone" src="/images/stone-element/stone_11.svg" />
           <img class="stone" src="/images/stone-element/stone_12.svg" />
+          <img class="stone" src="/images/stone-element/stone_13.svg" />
+          <img class="stone" src="/images/stone-element/stone_14.svg" />
+          <img class="stone" src="/images/stone-element/stone_15.svg" />
+          <img class="stone" src="/images/stone-element/stone_16.svg" />
+          <img class="stone" src="/images/stone-element/stone_17.svg" />
+          <img class="stone" src="/images/stone-element/stone_18.svg" />
+          <img class="stone" src="/images/stone-element/stone_19.svg" />
+          <img class="stone" src="/images/stone-element/stone_20.svg" />
+          <img class="stone" src="/images/stone-element/stone_21.svg" />
         </div>
       </div>
     </div>
