--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mountain</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/css/mountainstyle.min.css" />
+    <script defer src="/__/firebase/10.14.0/firebase-app-compat.js"></script>
+    <script defer src="/__/firebase/10.14.0/firebase-storage-compat.js"></script>
+    <title>The Ascent</title>
   </head>
   <body>
-    <a href="top.html" class="button">climb to the top</a>
+    <a href="top.html" class="button">You've reached the peak!</a>
     <div class="pocket">
       <h3>Pocket</h3>
       <div class="stoneContainer">
@@ -153,24 +158,24 @@
       <span value="-5"><img src="/images/parallax-element/bg_93.svg" /></span>
       <div class="sign">
         <div class="greeting">
-          <h2>Mount Web</h2>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <h2>The Ascent</h2>
           <p>
-            This space is to just simply take a break<br />
-            from the noises around you and climb up a website.<br />
-            Pay a close attention to the stones and listen carefully<br />
-            to what they have to say.
+            Have you ever climbed a website? <br />
+            The Ascent is a refuge in the chaotic digital world. Like escaping to the mountains, this site offers a break from the endless cycle of apps and services that consume our attention with ads, recommendations, and notifications. Sometimes we need a space for pure fun and relaxation, free from productivity or utility.
           </p>
-          <div>
-            <h3>Instruction</h3>
-            <p>
-              Climb this website, find stones <br />
-              and add the ones you like to your collection.
-            </p>
-          </div>
+          <p>
+            The function is simple: <br />
+            as you ascend, collect stones and stack them at the peak with a small message. The form is entirely up to you, even if it defies gravity. This is a space where you can choose, create freely, and loosely connect with others.
+          </p>
+          <p>Created by Youjung Noh</p>
         </div>
         <div class="stick"></div>
       </div>
     </div>
-    <script src="/js/mountain.js"></script>
+    <script src="./js/mountain.js"></script>
   </body>
 </html>
