--- a/top.html
+++ b/top.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Top of the mountain</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/css/top.min.css" />
+    <script defer src="/__/firebase/10.14.0/firebase-app-compat.js"></script>
+    <script defer src="/__/firebase/10.14.0/firebase-storage-compat.js"></script>
+    <title>Top of the mountain</title>
   </head>
   <body>
     <div class="btnBar">
       <button id="openCanvasBtn">Stack</button>
       <button id="closeCanvasBtn">I don't want to stack</button>
-      <a href="./index.html" id="goDown">Go down</a>
+      <button id="goDown">Go Down</button>
     </div>
     <div id="collection"></div>
     <div id="canvasPocket">
@@ -50,6 +55,7 @@
         </div>
       </div>
     </div>
-    <script src="js/top.js"></script>
+    <script src="./js/firebaseConfig.js"></script>
+    <script src="./js/top.js"></script>
   </body>
 </html>
