--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,12 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/css/mountainstyle.min.css" />
-    <script defer src="/__/firebase/10.14.0/firebase-app-compat.js"></script>
-    <script defer src="/__/firebase/10.14.0/firebase-storage-compat.js"></script>
     <title>The Ascent</title>
   </head>
   <body>
-    <a href="top.html" class="button">You've reached the peak!</a>
+    <a href="top.html" class="button">Climb to the top</a>
     <div class="pocket">
       <h3>Pocket</h3>
       <div class="stoneContainer">
@@ -158,24 +156,26 @@
       <span value="-5"><img src="/images/parallax-element/bg_93.svg" /></span>
       <div class="sign">
         <div class="greeting">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <h2>The Ascent</h2>
-          <p>
-            Have you ever climbed a website? <br />
-            The Ascent is a refuge in the chaotic digital world. Like escaping to the mountains, this site offers a break from the endless cycle of apps and services that consume our attention with ads, recommendations, and notifications. Sometimes we need a space for pure fun and relaxation, free from productivity or utility.
-          </p>
-          <p>
-            The function is simple: <br />
-            as you ascend, collect stones and stack them at the peak with a small message. The form is entirely up to you, even if it defies gravity. This is a space where you can choose, create freely, and loosely connect with others.
-          </p>
-          <p>Created by Youjung Noh</p>
+          <div class="circles">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <h2>Ascend a Website</h2>
+          <div class="language-switcher">
+            <button id="lang-ko">[ 한국어 ]</button>
+            <button id="lang-en">[ English ]</button>
+          </div>
+          <p id="p1">등산 좋아하시나요? Ascend a Website는 끊임없이 스크롤 다운하는 콘텐츠에서의 디지털 도피처입니다. 앱을 무심코 켜고 들어가서, 콘텐츠를 끊임없이 스크롤 다운했더니 어느새 해가 뉘엿뉘엿 저물어 있는 경험을 해본 적이 있을 겁니다. 우리가 매일 접속하는 앱은 여러 가지 정보와 재미를 제공하지만, 그들이 만들어 놓은 끝없는 내리막길은 우리의 일상을 조금씩 잠식해 가고 있습니다. 우리에게 익숙한 스크롤 다운 개념과 반대되는 공간은 어떤 모습일까요?</p>
+          <p id="p2">등산은 중력을 거슬러 정상을 향해 올라가는 고생스러운 일이지만, 그 끝에서 일상의 번잡함에서 벗어나 잠시 숨을 고르고 뿌듯함을 느낄 수 있습니다. 정상에는 이 길을 다녀간 사람들이 방명록처럼 쌓아놓은 돌탑들이 빼곡히 서 있습니다. 어떤 의미가 깃들어 있는지 알 수 없지만, 오랜 시간 공들인 만큼 저마다의 간절함이 담겨있다는 것을 알 수 있습니다.</p>
+          <p id="p3">사용자 중심의 편리함을 강조하는 디지털 공간 속에서 등산이라는 행동을 대입해 보면 어떨까요. 우리에게 익숙한 스크롤 다운 방식이 아닌, 그 반대의 여정입니다. 사용자는 오르며 돌을 모으고, 정상에서 그 돌로 자신만의 탑을 쌓습니다. 어떤 돌을 선택하고 어떤 방식으로 탑을 쌓을지는 전적으로 방문자의 몫입니다. 이러한 방식으로 사이트를 다녀간 사람들은 방문의 흔적을 남기고 느슨하게 연결될 수 있습니다.</p>
+          <p>Website created by <a a href="https://youjung-noh.com/">Youjung Noh</a></p>
         </div>
         <div class="stick"></div>
       </div>
     </div>
     <script src="./js/mountain.js"></script>
+    <script src="./js/language.js"></script>
   </body>
 </html>
