--- a/top.html
+++ b/top.html
@@ -7,14 +7,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/css/top.min.css" />
-    <script defer src="/__/firebase/10.14.0/firebase-app-compat.js"></script>
-    <script defer src="/__/firebase/10.14.0/firebase-storage-compat.js"></script>
     <title>Top of the mountain</title>
   </head>
   <body>
     <div class="btnBar">
       <button id="openCanvasBtn">Stack</button>
-      <button id="closeCanvasBtn">I don't want to stack</button>
+      <button id="closeCanvasBtn">Close</button>
       <button id="goDown">Go Down</button>
     </div>
     <div id="collection"></div>
@@ -55,7 +53,6 @@
         </div>
       </div>
     </div>
-    <script src="./js/firebaseConfig.js"></script>
     <script src="./js/top.js"></script>
   </body>
 </html>
